--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 </head>
 <body>
 
+<header>
+
+</header>
+
+<nav>
+
+</nav>
+
+<main>
+
+</main>
+
+<footer>
+
+</footer>
+
 <script src="js/script.js"></script>
 </body>
 </html>
