Added a front wall

--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
 
 <main>
 
+<div id="frontWall">
+<div id="doorOpen">
+<div class="screen">
+<p id="openDoorScreen"></p>
+</div>
+<div class="doorKnob"></div>
+</div>
+<div id="door">
+<div class="screen">
+
+<input type="text" id="accountInput" placeholder="Account ID" required>
+<input type="password" id="passwordInput" placeholder="Password" required>
+
+<div id="submitButtonLogin">Log In</div>
+
+</div>
+<div class="doorKnob"></div>
+</div>
+<div id="mailSlot"></div>
+</div>
+
 </main>
 
 <footer>
