The door now looks open when logged in

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 <main>
 
 <div id="frontWall">
+<div id="opening"></div>
 <div id="doorOpen">
-<div class="screen">
+<div id="topOfOpenDoor"></div>
+<div class="screen" id="screenOnOpenDoor">
 <p id="openDoorScreen"></p>
 </div>
 <div class="doorKnob"></div>
