The opened door's top crack is now shown

--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
 <div id="opening"></div>
 <div id="doorOpen">
 <div id="topOfOpenDoor"></div>
+<div id="bottomOfOpenDoor"></div>
+
+<div id="topOpening"></div>
+<div id="topOpeningLeftCrack"></div>
+
+<div id="topOpeningLeftBottomCrack"></div>
+
+<div id="topOpeningLeftTopCrack"></div>
+<div id="topOpeningLeftTopCrackFilling"></div>
+<div id="topOpeningLeftTopCrackFillingTwo"></div>
+<div id="topOpeningLeftTopCrackFillingThree"></div>
+<div id="topOpeningLeftTopCrackFillingFour"></div>
+<div id="topOpeningLeftTopCrackFillingFive"></div>
+
+<div id="topOpeningRightBottomCrackFilling"></div>
+<div id="topOpeningRightBottomCrackFillingTwo"></div>
+<div id="topOpeningRightBottomCrackFillingThree"></div>
+<div id="topOpeningRightBottomCrackFillingFour"></div>
+<div id="topOpeningRightBottomCrackFillingFive"></div>
+
+<div id="bottomOpening"></div>
+
 <div class="screen" id="screenOnOpenDoor">
 <p id="openDoorScreen"></p>
 </div>
