The opened door is fully complete

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 
 <div id="bottomOpening"></div>
 
+<div id="bottomOpeningTopRightCrackFilling"></div>
+<div id="bottomOpeningTopRightCrackFillingTwo"></div>
+<div id="bottomOpeningTopRightCrackFillingThree"></div>
+<div id="bottomOpeningTopRightCrackFillingFour"></div>
+
+<div id="bottomOpeningBottomLeftCrackFilling"></div>
+<div id="bottomOpeningBottomLeftCrackFillingTwo"></div>
+<div id="bottomOpeningBottomLeftCrackFillingThree"></div>
+
 <div class="screen" id="screenOnOpenDoor">
 <p id="openDoorScreen"></p>
 </div>
